--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "d3": "^7.4.0",
     "powerbi-visuals-api": "~5.3.0",
     "powerbi-visuals-utils-dataviewutils": "^6.0.0",
-    "powerbi-visuals-utils-formattingutils": "^6.0.0"
+    "powerbi-visuals-utils-formattingmodel": "^5.0.0",
+    "powerbi-visuals-utils-formattingutils": "~4.7.1"
   },
   "devDependencies": {
     "ts-loader": "6.1.0",
